--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
           GO_VERSION: ${{ env.GO_VERSION }}
 
       - name: Add Go to PATH
-        run: echo "/usr/local/go/bin:/root/go/bin" >> $GITHUB_PATH
+        run: |
+          echo "/usr/local/go/bin" >> $GITHUB_PATH
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
       - name: Run unit tests
         run: go test -v ./...
