--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Add Go to PATH
         run: |
+          # Add Go to PATH for this step first
+          export PATH="/usr/local/go/bin:${PATH}"
+          # Now add both Go and GOPATH/bin permanently for subsequent steps
           echo "/usr/local/go/bin" >> $GITHUB_PATH
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
